@@ -3894,8 +3894,9 @@ Version 1.6.0beta07 [January 28, 2012]
     pngsuite/README.txt.
 
 Version 1.6.0beta08 [January 28, 2012]
-  Fixed Image::colormap mis-alignment in pngstest.c
+  Fixed Image::colormap misalignment in pngstest.c
   Check libtool/libtoolize version number (2.4.2) in configure.ac
+  Divide pngstest into separate runs for basic and transparent images.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
